unpackaged/main/default/objects/Sales_Review__c/Sales_Review__c.object-meta.xml
<CustomObject>
    <label>Sales Review</label>
    <nameField>
        <label>Sales Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>