unpackaged/main/default/objects/Sales_Review__c/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <defaultValue>{{ADMIN_EMAIL}}</defaultValue>
    <label>Administrator</label>
    <type>Email</type>
</CustomField>