unpackaged/main/default/objects/Sales_Review__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <defaultValue>{{REVIEW_URL}}</defaultValue>
    <label>Link</label>
    <type>Url</type>
</CustomField>