unpackaged/main/default/objects/Sales_Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <defaultValue>{{REVIEWER_EMAIL}}</defaultValue>
    <label>Reviewer</label>
    <type>Email</type>
</CustomField>